--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "hashmap": "^2.4.0",
-    "prompt": "^1.0.0"
+    "prompt": "^1.0.0",
+    "prompt-sync": "^4.2.0"
   },
   "devDependencies": {},
   "scripts": {
